# Low-latency-system

./: CMakeLists.txt  README.md
apps/: trading_sim.cpp
benchmark/: benchmark_main.cpp
include/trading/core/: Events.hpp  Types.hpp
include/trading/exchange/: exchange_simulator.hpp
include/trading/execution/: execution_report_handler.hpp
include/trading/gateway/: order_gateway.hpp
include/trading/md/: OrderBook.hpp  market_data_replay.hpp
include/trading/metrics/: latency_recorder.hpp
include/trading/oms/: OMS.hpp  order_manager.hpp  order_state_machine.hpp
include/trading/position/: position_manager.hpp
include/trading/risk/: RiskEngine.hpp  pre_trade_risk_engine.hpp
include/trading/strategy/: Strategy.hpp  strategy_simulator.hpp
include/trading/utils/: object_pool.hpp  spsc_queue.hpp
src/exchange/: exchange_simulator.cpp
src/execution/: execution_report_handler.cpp
src/gateway/: order_gateway.cpp
src/md/: market_data_replay.cpp  order_book.cpp
src/metrics/: latency_recorder.cpp
src/oms/: OMS.cpp  order_manager.cpp  order_state_machine.cpp
src/position/: position_manager.cpp
src/risk/: RiskEngine.cpp  pre_trade_risk_engine.cpp
src/strategy/: Strategy.cpp  strategy_simulator.cpp
tests/: test_core_types.cpp  test_end_to_end_pipeline.cpp  test_exchange_simulator.cpp  test_execution_report_handler.cpp  test_latency_recorder.cpp  test_main.cpp  test_market_data_replay.cpp  test_object_pool.cpp  test_order_book.cpp  test_order_gateway.cpp  test_order_manager.cpp  test_order_state_machine.cpp  test_position_manager.cpp  test_pre_trade_risk_engine.cpp  test_spsc_queue.cpp  test_strategy_simulator.cpp  test_threaded_pipeline.cpp
